# Rusty-CRACKER

./: .gitignore  Cargo.toml  relazione.md  requirements.txt  todo.md
NX/: a.py  analysis.py  ig.py
TemplateTesi/: TemplateTriennaleInformaticaPisa.aux  TemplateTriennaleInformaticaPisa.blg  TemplateTriennaleInformaticaPisa.lof  TemplateTriennaleInformaticaPisa.tex  TemplateTriennaleInformaticaPisa.toc  capitolo1.tex
concurrent_graph/: Cargo.toml
concurrent_graph/src/: concurrent_digraph.rs  concurrent_graph.rs  concurrent_ungraph.rs  lib.rs  traits.rs
concurrent_graph/tests/: unit_test.rs
files/: aves-wildbird-network-6.mtx  aves-wildbird.mtx  bio-CE-GN.mtx  bio-HS-CX.mtx  bio-grid-yeast.mtx  example.mtx  example0.mtx  example2.mtx  example4.mtx  soc-wiki-vote2.mtx  soc-wiki-vote3.mtx
files/syn/: syn100000.mtx  syn200000.mtx  syn50000.mtx
files/syn/fixedNodes/: syn_50k_100k.mtx  syn_50k_200k.mtx  syn_50k_50k.mtx
io_util/: Cargo.toml
io_util/src/: lib.rs
plotting/: (real)par_vs_rayon.csv  (syn)par_vs_rayon.csv  (titanic)syn_1M_10M_diffThread.csv  3d_plot.py  500k_diff_thread.csv  V2_syn_1M_10M_diffThread.csv  V2_syn_50k_1M_diffThread.csv  bn_titanic_diffThread.csv  dataset_info.csv  facebook_artist_diffThread.csv  facebook_diff_thread.csv  nbk.ipynb  node_sensitivity.csv  rgg_diffThread.csv  syn_1M_10M_diffThread.csv  syn_2M_10M_diffThread.csv  syn_50k_100k_diffThread.csv  syn_50k_1M_diffThread.csv  syn_50k_2M_RustvsSpark.csv  syn_50k_50k_RustvsSpark.csv  syn_5M_20M_diffThread.csv
src/: avg_calc.sh  base.rs  cg.rs  concurrent_graph.rs  concurrentgraph_utils_rayon.rs  ep.rs  epos.rs  generalized_graph.rs  graph_utils.rs  graphmap.rs  graphmap_utils.rs  graphmap_utils_par.rs  graphmap_utils_rayon.rs  graphmap_utils_rayon_v2.rs  input_util.rs  io_util.rs  main.rs  main_base.rs  main_opt.rs  multithreaded_graph.rs  naive.rs  par_main.rs  par_main_base.rs  par_main_ep.rs  par_main_epos.rs  par_main_opt.rs  pruning_test.rs  rayon_main.rs  rayon_main_base.rs  rayon_main_epos.rs  rayon_main_opt.rs  relazione.md  singlethreaded_graph.rs
src/multipleMutex/: cg.rs  concurrent_graph.rs
src/sketches/: big_graph_test.rs  cli_parse.rs  dashmap.rs  dashmap_test.rs  filtermap.rs  generalized_graph.rs  graphmap.rs  native_thread.rs  neigh.rs  parallel_graph.rs  pruning_test.rs  tree_propagation.rs
src/sketches/libs/: graphmap_utils_parking.rs
