[package]
name = "graph_example"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = {version = "6.0.1", features = ["rayon"]}
getopts = "0.2.21"
petgraph = { version = "0.6.5", features = ["rayon"] }
rand = "0.8.5"  #dev-dependencies
rayon = "1.10.0"
rustworkx-core = "0.15.1"


# ----------------- TEST -----------------
#[[bin]]
#name = "countingThreads"
#path = "src/sketches/countingThreads.rs"

#[[bin]]
#name = "mvp"
#path = "src/multipleMutex/mvp.rs"

[[bin]]
name = "cg"
path = "src/cg.rs"

[[bin]]
name = "base"
path = "src/base.rs"

[[bin]]
name = "ep"
path = "src/ep.rs"

[[bin]]
name = "epos"
path = "src/epos.rs"


# ----------------- PROD -----------------
#[[bin]]
#name = "naive"
#path = "src/naive.rs"

#par
#[[bin]]
#name = "par_main"
#path = "src/par_main.rs"

#[[bin]]
#name = "par_main_ep"
#path = "src/par_main_ep.rs"

#[[bin]]
#name = "par_main_epos"
#path = "src/par_main_epos.rs"


#rayon
[[bin]]
name = "rayon_main"
path = "src/sketches/oldVersion/rayon_main.rs"

[[bin]]
name = "rayon_main_ep"
path = "src/sketches/oldVersion/rayon_main_ep.rs"

[[bin]]
name = "rayon_main_epos"
path = "src/sketches/oldVersion/rayon_main_epos.rs"
