[package]
name = "graph_example"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
concurrent_graph = {path = "./concurrent_graph"}
dashmap = {version = "6.0.1", features = ["rayon"]}
getopts = "0.2.21"
io_util = {path = "./io_util"}
rayon = "1.10.0"


[[bin]]
name = "base"
path = "src/base.rs"

[[bin]]
name = "ep"
path = "src/ep.rs"

[[bin]]
name = "epos"
path = "src/epos.rs"
